【修改】删除testSDKClient 张鹏凯